logica de funcionamento da api pronta